k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cha-website
  labels:
    name: cha-website
    app.kubernetes.io/part-of: cha
