k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: srenix-website
  namespace: srenix-website
  labels:
    app.kubernetes.io/name: srenix-website
    app.kubernetes.io/instance: srenix-website
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: srenix
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: srenix-website
    app.kubernetes.io/instance: srenix-website
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
